include/sonare/sonare_c_effects.h


SonareError sonare_hpss(const float* samples, size_t length, int sample_rate, int kernel_harmonic,
                        int kernel_percussive, SonareHpssResult* out);
SonareError sonare_hpss_ex(const float* samples, size_t length, int sample_rate,
                           int kernel_harmonic, int kernel_percussive, int n_fft, int hop_length,
                           int use_soft_mask, int with_residual, SonareHpssResult* out,
                           float** out_residual);
SonareError sonare_harmonic(const float* samples, size_t length, int sample_rate, float** out,
                            size_t* out_length);
SonareError sonare_percussive(const float* samples, size_t length, int sample_rate, float** out,
                              size_t* out_length);
SonareError sonare_time_stretch(const float* samples, size_t length, int sample_rate, float rate,
                                float** out, size_t* out_length);
SonareError sonare_time_stretch_ex(const float* samples, size_t length, int sample_rate, float rate,
                                   int n_fft, int hop_length, float** out, size_t* out_length);
SonareError sonare_pitch_shift(const float* samples, size_t length, int sample_rate,
                               float semitones, float** out, size_t* out_length);
SonareError sonare_pitch_shift_ex(const float* samples, size_t length, int sample_rate,
                                  float semitones, int n_fft, int hop_length, float** out,
                                  size_t* out_length);
SonareError sonare_pitch_correct_to_midi(const float* samples, size_t length, int sample_rate,
                                         float current_midi, float target_midi, float** out,
                                         size_t* out_length);
SonareError sonare_pitch_correct_to_midi_timevarying(const float* samples, size_t length,
                                                     int sample_rate, const float* f0_hz,
                                                     const float* voiced_prob,
                                                     const int32_t* voiced, size_t n_frames,
                                                     int hop_length, float target_midi, float** out,
                                                     size_t* out_length);
typedef struct {
  int32_t target_mode;         
  float target_midi;           
  int32_t scale_root;          
  uint32_t scale_mode_mask;    
  float scale_reference_midi;  
  float retune_amount;         
  float max_correction_semitones;  
  float retune_speed_ms;           
  float vibrato_threshold_cents;   
} SonarePitchCorrectionConfig;
SonareError sonare_pitch_correction_config_default(SonarePitchCorrectionConfig* config);
SonareError sonare_pitch_correct_timevarying(const float* samples, size_t length, int sample_rate,
                                             const float* f0_hz, const float* voiced_prob,
                                             const int32_t* voiced, size_t n_frames, int hop_length,
                                             const SonarePitchCorrectionConfig* config, float** out,
                                             size_t* out_length);
SonareError sonare_note_stretch(const float* samples, size_t length, int sample_rate,
                                int onset_sample, int offset_sample, float stretch_ratio,
                                float** out, size_t* out_length);
SonareError sonare_note_move(const float* samples, size_t length, int sample_rate, int onset_sample,
                             int offset_sample, int target_onset_sample, float** out,
                             size_t* out_length);
typedef struct {
  int32_t struct_version;
  float segmentation_threshold_cents;
  float min_note_ms;
  float reference_hz;
  float voiced_threshold;
} SonareNoteExtractorConfig;
typedef struct {
  int32_t struct_version;
  float fade_ms;
  float vibrato_cutoff_hz;
} SonareNoteRenderConfig;
typedef struct {
  int64_t time_offset_samples;
  int64_t envelope_offset;
  size_t envelope_count;
  float pitch_shift_semitones;
  float gain_db;
  float time_stretch_ratio;
  float formant_shift_semitones;
  float vibrato_depth_change;
  float drift_change;
  int32_t muted;
} SonareNoteEdit;
typedef struct {
  int64_t onset_sample;
  int64_t offset_sample;
  int64_t amplitude_offset;
  int32_t frame_start;
  int32_t frame_end;
  float median_hz;
  float median_cents;
  float f0_stability;
  SonareNoteEdit edit;
} SonareNoteObject;
typedef struct {
  SonareNoteObject* notes;
  size_t count;
  float* amplitude;
  size_t amplitude_count;
  float* envelopes;
  size_t envelope_count;
} SonareNoteObjectsResult;
SonareError sonare_extract_notes(const float* samples, size_t length, int sample_rate,
                                 const float* f0_hz, const float* voiced_prob,
                                 const int32_t* voiced, size_t n_frames, float frame_rate,
                                 const SonareNoteExtractorConfig* config,
                                 SonareNoteObjectsResult* out);
void sonare_free_note_objects(SonareNoteObjectsResult* result);
SonareError sonare_render_notes(const float* samples, size_t length, int sample_rate,
                                const SonareNoteObject* notes, size_t note_count,
                                const float* envelopes, size_t envelope_count, const float* f0_hz,
                                size_t n_frames, float frame_rate,
                                const SonareNoteRenderConfig* config, float** out,
                                size_t* out_length);
typedef struct {
  double start_sec;
  double end_sec;
  float target_midi;
} SonareNoteTarget;
typedef struct {
  int32_t unmatched_policy;  
  float min_overlap_ratio;
  float max_correction_semitones;
} SonareNoteTargetAssignConfig;
SonareError sonare_note_target_assign_config_default(SonareNoteTargetAssignConfig* config);
SonareError sonare_note_targets_from_smf(const uint8_t* bytes, size_t len, int track_index,
                                         SonareNoteTarget** out, size_t* out_count);
void sonare_free_note_targets(SonareNoteTarget* targets);
SonareError sonare_assign_note_targets(SonareNoteObject* notes, size_t note_count, int sample_rate,
                                       const SonareNoteTarget* targets, size_t target_count,
                                       const SonareNoteTargetAssignConfig* config,
                                       size_t* out_assigned_count);
typedef struct {
  int n_fft;              
  int hop_length;         
  int window;             
  int heal_radius_frames; 
} SonareSpectralEditConfig;
typedef struct {
  int64_t start_sample; 
  int64_t end_sample;   
  float low_hz;         
  float high_hz;        
  float gain_db;        
  int mode;             
} SonareSpectralRegionOp;
SonareError sonare_spectral_edit(const float* samples, size_t length, int sample_rate,
                                 const SonareSpectralEditConfig* config,
                                 const SonareSpectralRegionOp* ops, size_t n_ops, float** out,
                                 size_t* out_length);