bindings/python/src/libsonare/_ffi_signatures_effects.py

"""ctypes function signatures for libsonare."""
# ruff: noqa: F405

from __future__ import annotations

import ctypes
from typing import Any

from ._ffi_types import *  # noqa: F403,F405


def configure_effects_signatures(lib: ctypes.CDLL) -> None:
    # --- Effects ---

    # sonare_hpss
    lib.sonare_hpss.restype = ctypes.c_int32
    lib.sonare_hpss.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareHpssResult),
    ]
    if hasattr(lib, "sonare_hpss_ex"):
        lib.sonare_hpss_ex.restype = ctypes.c_int32
        lib.sonare_hpss_ex.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareHpssResult),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ]

    # sonare_harmonic
    lib.sonare_harmonic.restype = ctypes.c_int32
    lib.sonare_harmonic.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_percussive
    lib.sonare_percussive.restype = ctypes.c_int32
    lib.sonare_percussive.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_time_stretch
    lib.sonare_time_stretch.restype = ctypes.c_int32
    lib.sonare_time_stretch.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
    if hasattr(lib, "sonare_time_stretch_ex"):
        lib.sonare_time_stretch_ex.restype = ctypes.c_int32
        lib.sonare_time_stretch_ex.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_spectral_edit
    lib.sonare_spectral_edit.restype = ctypes.c_int32
    lib.sonare_spectral_edit.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(SonareSpectralEditConfig),
        ctypes.POINTER(SonareSpectralRegionOp),
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_pitch_shift
    lib.sonare_pitch_shift.restype = ctypes.c_int32
    lib.sonare_pitch_shift.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
    if hasattr(lib, "sonare_pitch_shift_ex"):
        lib.sonare_pitch_shift_ex.restype = ctypes.c_int32
        lib.sonare_pitch_shift_ex.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_pitch_correct_to_midi
    lib.sonare_pitch_correct_to_midi.restype = ctypes.c_int32
    lib.sonare_pitch_correct_to_midi.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_pitch_correct_to_midi_timevarying
    if hasattr(lib, "sonare_pitch_correct_to_midi_timevarying"):
        lib.sonare_pitch_correct_to_midi_timevarying.restype = ctypes.c_int32
        lib.sonare_pitch_correct_to_midi_timevarying.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_int32),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_pitch_correction_config_default + sonare_pitch_correct_timevarying
    if hasattr(lib, "sonare_pitch_correct_timevarying"):
        lib.sonare_pitch_correction_config_default.restype = ctypes.c_int32
        lib.sonare_pitch_correction_config_default.argtypes = [
            ctypes.POINTER(SonarePitchCorrectionConfig),
        ]
        lib.sonare_pitch_correct_timevarying.restype = ctypes.c_int32
        lib.sonare_pitch_correct_timevarying.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_int32),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonarePitchCorrectionConfig),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_note_stretch
    lib.sonare_note_stretch.restype = ctypes.c_int32
    lib.sonare_note_stretch.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_note_move
    lib.sonare_note_move.restype = ctypes.c_int32
    lib.sonare_note_move.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_extract_notes + sonare_free_note_objects + sonare_render_notes
    if hasattr(lib, "sonare_extract_notes"):
        lib.sonare_extract_notes.restype = ctypes.c_int32
        lib.sonare_extract_notes.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_int32),
            ctypes.c_size_t,
            ctypes.c_float,
            ctypes.POINTER(SonareNoteExtractorConfig),
            ctypes.POINTER(SonareNoteObjectsResult),
        ]
        lib.sonare_free_note_objects.restype = None
        lib.sonare_free_note_objects.argtypes = [ctypes.POINTER(SonareNoteObjectsResult)]
        lib.sonare_render_notes.restype = ctypes.c_int32
        lib.sonare_render_notes.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonareNoteObject),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_float,
            ctypes.POINTER(SonareNoteRenderConfig),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_note_targets_from_smf + sonare_free_note_targets. The SMF reader
    # carries the arrangement gate, not the pitch-editor one the assignment
    # below is behind, so the two are guarded apart.
    if hasattr(lib, "sonare_note_targets_from_smf"):
        lib.sonare_note_targets_from_smf.restype = ctypes.c_int32
        lib.sonare_note_targets_from_smf.argtypes = [
            ctypes.POINTER(ctypes.c_uint8),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.POINTER(SonareNoteTarget)),
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_free_note_targets.restype = None
        lib.sonare_free_note_targets.argtypes = [ctypes.POINTER(SonareNoteTarget)]

    # sonare_note_target_assign_config_default + sonare_assign_note_targets
    if hasattr(lib, "sonare_assign_note_targets"):
        lib.sonare_note_target_assign_config_default.restype = ctypes.c_int32
        lib.sonare_note_target_assign_config_default.argtypes = [
            ctypes.POINTER(SonareNoteTargetAssignConfig)
        ]
        lib.sonare_assign_note_targets.restype = ctypes.c_int32
        lib.sonare_assign_note_targets.argtypes = [
            ctypes.POINTER(SonareNoteObject),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonareNoteTarget),
            ctypes.c_size_t,
            ctypes.POINTER(SonareNoteTargetAssignConfig),
            ctypes.POINTER(ctypes.c_size_t),
        ]
